# qgis_gradienter

./: README.md  gradient.py  pyproject.toml
