[project]
name = "qgis-gradienter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonas", email = "jona5@me.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_gradienter"]
